--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -41,7 +41,7 @@
     </section>
 
     <!--Formulario para crear cuenta-->
-    <section class="container mx-auto py-2 px-4 " id="crearcuenta">
+    <section class="container mx-auto py-2 px-4 text-1xl " id="crearcuenta">
         <div class="flex flex-col items-center justify-center">
             <div class="bg-gray-800 p-8 rounded-lg shadow-lg w-full max-w-4xl">
                 <div class="flex justify-center mb-6">
