--- a/pages/inicioSesion.html
+++ b/pages/inicioSesion.html
@@ -50,7 +50,7 @@
                     <div class="relative">
                         <label for="email"
                             class="flex items-center gap-2 text-xs font-medium text-gray-700 dark:text-gray-200 mb-3">
-                            Ingresa tu correo electrónico
+                            Ingresa tu correo electrónico o usuario
                         </label>
                         <input type="email" id="email" name="email" required
                             class="block w-full px-4 py-3 border border-gray-300 bg-gray-100 text-gray-800 placeholder-gray-500 dark:bg-gray-700 dark:text-white dark:border-gray-600 placeholder-gray-400 transition-colors focus:border-indigo-500 focus:outline-none focus:ring focus:ring-indigo-200 dark:focus:ring-indigo-500"
